Fix T45649: Adding Point Density Texture to World Color Crashes Blender.

Crash was caused by missing field in NodeShaderTexPointDensity.

Committed with @dingto blessings.